# odoo-demo

./: .env  Dockerfile  README.md  docker-compose.yml
docs/prompts/: mercedes-competitive-intelligence-agent.md
odoo/: docker-compose.yml
src/: pyproject.toml  server.py
src/config/: config.py
src/models/: models_product.py  models_sale.py  models_user.py
src/tests/: __init__.py  test_api_client.py  test_config.py  test_download_routes.py  test_models.py  test_server.py  test_tools.py
src/tests/tools/: __init__.py  conftest.py
src/tools/: __init__.py  odoo_api.py
src/tools/products/: __init__.py  get_product.py  list_products.py
src/tools/sales/: __init__.py  get_sale_order.py  list_sale_orders.py
src/tools/users/: __init__.py  get_user.py  list_users.py
