[project]
name = "mcp-odoo"
version = "0.1.0"
description = "MCP Gateway for Odoo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ruff>=0.12.1",
    "mcp>=0.1.0",
    "pandas>=2.2.0",
    "fastapi>=0.95.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0"
]

[tool.setuptools]
packages = [
    "config",
    "models",
    "tools",
    "tests"
]

[tool.ruff]
src = ["."] 
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["api_client", "config", "models", "server", "tools"]
